<resources>
    <string name="app_name">山城</string>
    <string name="shouye">首页</string>
    <string name="fenlei">分类</string>
    <string name="tuangou">团购</string>
    <string name="gouwuche">购物车</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_account">手机号/邮箱/用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="free_retiger">免费注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="copyright">Copyright&#160;2012-2015&#160;NAI.COM&#160;版权所有</string>
    <string name="desktop">桌面版</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="find_password">找回密码</string>
    <string name="phone_number">手机号</string>
    <string name="input_iphone">请输入手机号</string>
    <string name="verification">验证码</string>
    <string name="input_verification_code">输入手机验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="ok">确定</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="input_char">填写图片所示的字符</string>
    <string name="i_agree">我已阅读并同意</string>
    <string name="agreement">《用户注册协议》</string>
    <string name="title_activity_agreement">AgreementActivity</string>
    <string name="member_agreement">会员注册协议</string>
    <string name="search">&#160;&#160;&#160;&#160;你要的，就在这里......</string>
    <string name="search2">输入关键词进行搜索</string>
    <string name="zhuceyouli">注册有礼</string>
    <string name="personalcenter">个人中心</string>
    <string name="wodedingdan">我的订单</string>
    <string name="history">浏览历史</string>
    <string name="accountsafe">账户安全</string>
    <string name="wodeguanzhu">我的收藏</string>
    <string name="myjifen">我的积分</string>
    <string name="address">管理收获地址</string>
    <string name="about">关于我们</string>
    <string name="suggest">意见反馈</string>
    <string name="cleandata">清理缓存</string>
    <string name="help">帮助中心</string>
    <string name="version">版本检测</string>
    <string name="set">设置</string>
    <string name="shanchengtuangou">山城团购</string>
    <string name="shanchengyushou">山城预售</string>
    <string name="fenleichaxun">分类查询</string>
    <string name="zhangshangtuangou">掌上团购</string>
    <string name="tejiashangpin">特价商品</string>
    <string name="more">更多</string>
    <string name="shangpinfenlei">商品分类</string>
    <string name="title_activity_classification_details">ClassificationDetailsActivity</string>
    <string name="please_search">请输入关键词进行搜索</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_shopping">ShoppingActivity</string>
    <string name="shopping_name">商品名字</string>
    <string name="shopping_price">0</string>
    <string name="liangyoutiaoliao">粮油调料</string>
    <string name="rihuaqingjie">日化清洁</string>
    <string name="gerenhuli">个人护理</string>
    <string name="bendinongchanpin">本地农产品</string>
    <string name="shipinyinliao">食品饮料</string>
    <string name="yangshengzhenpin">养生臻品</string>
    <string name="haiwaichaohuo">海外潮货</string>
    <string name="shumajiadian">数码家电</string>
    <string name="xiangcunlvyou">乡村旅游</string>
    <string name="kefu">客服</string>
    <string name="save">收藏</string>
    <string name="shopping">商品</string>
    <string name="details">详情</string>
    <string name="evaluate">评价</string>
    <string name="add_to_shoppingcar">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="shopping_fenlei">商品分类</string>
    <string name="sales">销量</string>
    <string name="grade">评分</string>
    <string name="price">价格</string>
    <string name="new_arrive">最新上架</string>
    <string name="gwcisnull">购物车还是空的，快去逛逛吧！</string>
    <string name="goshopping">去逛逛</string>
    <string name="yourlove">猜你喜欢</string>
    <string name="app_tuangou">山城速购团购</string>
    <string name="app_yushou">山城速购预售</string>
    <string name="nocontent">暂时没有更多内容</string>
    <string name="title_activity_yu_shou">YuShouActivity</string>
    <string name="title_activity_my_shan_cheng">MyShanChengActivity</string>
    <string name="my_nickname">我的昵称</string>
    <string name="my_order">我的订单</string>
    <string name="edit">编辑</string>
    <string name="voucher">代金券</string>
    <string name="account_balance">账户余额</string>
    <string name="integral">积分</string>
    <string name="sign_integral">签到送积分</string>
    <string name="last_pay">待付款</string>
    <string name="last_deliver">待发货</string>
    <string name="last_consignee">待收货</string>
    <string name="last_evaluate">待评价</string>
    <string name="shopping_in_gwc">购物车中的产品</string>
    <string name="goto_comment">去凑单</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="new_address">新建收货地址</string>
    <string name="default_address">默认地址</string>
    <string name="delete">删除</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_set_user_name">SetUserNameActivity</string>
    <string name="title_activity_amend">AmendActivity</string>
    <string name="title_activity_amend_name">AmendNameActivity</string>
    <string name="title_activity_suggest">SuggestActivity</string>
    <string name="title_activity_help_center">HelpCenterActivity</string>
    <string name="title_activity_edit_address">EditAddressActivity</string>
    <string name="title_activity_yindao">YindaoActivity</string>
    <string name="title_activity_qishi">QishiActivity</string>
    <string name="title_activity_set_password">SetPasswordActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_set_phone">SetPhoneActivity</string>
    <string name="title_activity_my_collection">MyCollectionActivity</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="title_activity_my_jifen">MyJifenActivity</string>
    <string name="title_activity_set_new_phone">SetNewPhoneActivity</string>
    <string name="title_activity_dingdan">DingdanActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_make_comment">MakeCommentActivity</string>
    <string name="title_activity_affirm_dingdan">AffirmDingdanActivity</string>
    <string name="title_activity_wait_receive">WaitReceiveActivity</string>
    <string name="title_activity_apply_refund">ApplyRefundActivity</string>
    <string name="title_activity_dingdan_wuliu">DingdanWuliuActivity</string>
</resources>
